--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/aiz97/viled#readme",
   "devDependencies": {
+    "css-loader": "3.6",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
   }
